Update target JDK to 11 and move to JakartaEE